[package]
name = "clinews"
version = "0.1.0"
edition = "2021"
description = "A custom-styled cli news app"
license = "MIT"
authors = ["ShreyB2091"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
newsapi = {path = "./newsapi"}
termimad = "0.23.1"
